# BIDInet

./: LICENSE.md
BIDInet/: CMakeLists.txt  FindBox2D.cmake
BIDInet/resources/: bidinet.cl
BIDInet/source/: Dodgeball.cpp  Dodgeball_CSRL.cpp  Dodgeball_DQN.cpp  Dodgeball_FERL.cpp  Dodgeball_PRSDRRL.cpp  Dodgeball_QPRSDR.cpp  Dodgeball_SDRRL.cpp  Experiment_Prediction.cpp  Main.cpp  Pong.cpp  Runner.cpp  RunnerMain.cpp  Settings.h  VideoTest.cpp
BIDInet/source/bidinet/: BIDInet.cpp  BIDInet.h
BIDInet/source/convnet/: ConvNet.cpp  ConvNet.h  DQN.cpp  DQN.h  Layer.cpp  Layer.h  Map.h
BIDInet/source/convnet/layers/: ConvLayer.cpp  ConvLayer.h  InputLayer.h  MaxPoolingLayer.cpp  MaxPoolingLayer.h
BIDInet/source/deep/: CSRL.cpp  CSRL.h  FERL.cpp  FERL.h  HierarchicalSwarm.cpp  HierarchicalSwarm.h  MiniQ.cpp  MiniQ.h  SDRRL.cpp  SDRRL.h  SFERL.cpp  SFERL.h  SelfOptimizingUnit.cpp  SelfOptimizingUnit.h
BIDInet/source/neo/: Agent.cpp  Agent.h  Column.cpp  Column.h  PredictiveHierarchy.cpp  PredictiveHierarchy.h  SparseCoder.cpp  SparseCoder.h
BIDInet/source/runner/: Runner.cpp  Runner.h
BIDInet/source/sdr/: ICSRL.cpp  IPRSDRRL.cpp  IPRSDRRL.h  IPredictiveRSDR.cpp  IPredictiveRSDR.h  IRSDR.cpp  IRSDR.h  PRSDRRL.cpp  PRSDRRL.h  PredictiveRSDR.h  QPRSDR.cpp  QPRSDR.h
BIDInet/source/system/: ComputeProgram.cpp  ComputeProgram.h  ComputeSystem.cpp  ComputeSystem.h  ParallelFor.h  SoftwareImage2D.h  ThreadPool.cpp  ThreadPool.h  Uncopyable.h
BIDInet/source/vis/: CSRLVisualizer.cpp  CSRLVisualizer.h
